# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.112 2010/06/15 17:57:36 darkside Exp $

  15 Jun 2010; Jeremy Olexa <darkside@gentoo.org>
  emul-linux-x86-baselibs-20100409.ebuild,
  emul-linux-x86-baselibs-20100611.ebuild:
  Drop ~amd64-linux kws, legacy cruft

*emul-linux-x86-baselibs-20100611 (11 Jun 2010)

  11 Jun 2010; Pacho Ramos <pacho@gentoo.org>
  -emul-linux-x86-baselibs-20091231.ebuild,
  +emul-linux-x86-baselibs-20100611.ebuild:
  Version bump, remove old.

  02 Jun 2010; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-baselibs-20100409.ebuild:
  amd64 stable, bug 321445

*emul-linux-x86-baselibs-20100409 (09 Apr 2010)

  09 Apr 2010; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-baselibs-20100409.ebuild:
  Version bump and fix bug 312035 (thanks to Michael Weber for reporting)

  22 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-baselibs-20100220.ebuild:
  amd64 stable, bug 310609

*emul-linux-x86-baselibs-20100220 (20 Feb 2010)

  20 Feb 2010; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-baselibs-20100220.ebuild:
  Version bump with updated packages

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  -emul-linux-x86-baselibs-20081109.ebuild:
  Remove old.

  29 Jan 2010; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-baselibs-20091231.ebuild:
  amd64 stable, bug 301928

  15 Jan 2010; Jonathan Callen <abcd@gentoo.org>
  emul-linux-x86-baselibs-20081109.ebuild,
  emul-linux-x86-baselibs-20091231.ebuild:
  Add prefix keywords

  06 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
  emul-linux-x86-baselibs-20081109.ebuild,
  emul-linux-x86-baselibs-20091231.ebuild:
  Fix LICENSE, "PAM" is the same as "|| ( BSD GPL-2 )" which is already
  listed.

  01 Jan 2010; Pacho Ramos <pacho@gentoo.org> -files/75emul-linux-x86-base,