@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-xlibs/Attic/emul-linux-x86-xlibs-20100409-r1.ebuild,v 1.2 2010/06/02 13:44:25 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-xlibs/Attic/emul-linux-x86-xlibs-20100409-r1.ebuild,v 1.3 2010/06/15 18:01:03 darkside Exp $
 
 inherit emul-linux-x86
 
@@ -9,7 +9,7 @@ SRC_URI="mirror://gentoo/${PN}-${PV}.tar.bz2
 
 LICENSE="BSD FTL GPL-2 MIT MOTIF"
 
-KEYWORDS="-* amd64 ~amd64-linux"
+KEYWORDS="-* amd64"
 IUSE="opengl"
 
 DEPEND=""
