@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-xlibs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.98 2010/06/11 14:38:28 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.99 2010/06/15 18:01:03 darkside Exp $
+
+  15 Jun 2010; Jeremy Olexa <darkside@gentoo.org>
+  emul-linux-x86-xlibs-20100220.ebuild,
+  emul-linux-x86-xlibs-20100409-r1.ebuild,
+  emul-linux-x86-xlibs-20100611.ebuild:
+  Drop ~amd64-linux kws, legacy cruft
 
 *emul-linux-x86-xlibs-20100611 (11 Jun 2010)
 
