@@ -1,8 +1,9 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.112 2010/06/15 17:57:36 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.113 2010/06/15 17:59:34 darkside Exp $
 
   15 Jun 2010; Jeremy Olexa <darkside@gentoo.org>
+  emul-linux-x86-baselibs-20100220.ebuild,
   emul-linux-x86-baselibs-20100409.ebuild,
   emul-linux-x86-baselibs-20100611.ebuild:
   Drop ~amd64-linux kws, legacy cruft
